# qbinarizer

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp  mystruct.h
include/qbinarizer/: ExprMaster  StructDecoder  StructEncoder  StructReflector
include/qbinarizer/export/: qbinarizer_export.h  qbinirizer_export.h
include/qbinarizer/internal/: exprmaster.h  structdecoder.h  structencoder.h  structreflector.h
src/: bitutils.h  exprmaster.cpp  jsonutils.cpp  jsonutils.h  structdecoder.cpp  structencoder.cpp  structreflector.cpp  structreflector.h
tests/: CMakeLists.txt  binarizertest.cpp  binarizertest.h
